--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -14,8 +14,41 @@
 }
 
 .products__item {
-  padding: 30px 32px 18px 21px;
+  padding: 30px 20px 18px 21px;
   background-color: $background-special;
+  background-repeat: no-repeat;
+
+  &--slim {
+    background-image: url("../icons/sprite.svg#cat-slim");
+    background-size: 50px 53px;
+    background-position: top 21px left 23px;
+
+    @media (min-width: $tablet-width) {
+      background-size: 200px 210px;
+      background-position: top 79px right 61px;
+    }
+
+    @media (min-width: $desktop-width) {
+      background-size: 100px 106px;
+      background-position: top 39px left 52px;
+    }
+  }
+
+  &--pro {
+    background-image: url("../icons/sprite.svg#cat-pro");
+    background-size: 67px 50px;
+    background-position: top 24px left 14px;
+
+    @media (min-width: $tablet-width) {
+      background-size: 268px 200px;
+      background-position: top 91px right 29px;
+    }
+
+    @media (min-width: $desktop-width) {
+      background-size: 134px 100px;
+      background-position: top 45px left 34px;
+    }
+  }
 
   @media (min-width: $tablet-width) {
     padding: 77px 316px 53px 53px;
@@ -29,7 +62,7 @@
 
 .products__title {
   @include accented-text(24px, 37px);
-  padding-left: 69px;
+  padding-left: 71px;
   margin-bottom: 29px;
   color: $color-basic;
 
@@ -48,7 +81,12 @@
 
 .products__subtitle {
   @include main-text;
-  margin-bottom: 38px;
+  margin-bottom: 15px;
+
+  @media (max-width: $mobile-width-only) {
+    padding-bottom: 22px;
+    border-bottom: 1px solid #d9d9d9;
+  }
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
@@ -64,11 +102,25 @@
 
 .products__link {
   @include accented-text(16px, 16px);
-  padding: 4px 47px 4px 0;
+  padding: 4px 57px 4px 0;
   color: $color-basic;
+  background-image: url("../icons/sprite.svg#arrow");
+  background-size: 32px 12px;
+  background-position: center right 9px;
+  background-repeat: no-repeat;
+
+  &:hover,
+  &:active {
+    background-image: url("../icons/sprite.svg#arrow-medium");
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
+    background-position: center right;
   }
 }
