--- a/source/sass/blocks/add-products.scss
+++ b/source/sass/blocks/add-products.scss
@@ -1,16 +1,25 @@
 .add-products__title {
+  @include decorative-line;
   font-family: $oswald;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
   color: $color-basic;
-  margin-bottom: 36px;
+  background-color: $color-basic-light;
+  margin-bottom: 34px;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
+    margin-left: 0;
+    padding-left: 37px;
     margin-bottom: 80px;
+
+    @media (min-width: $desktop-width) {
+      margin-left: -40px;
+      padding-left: 40px;
+    }
   }
 }
 
@@ -28,7 +37,7 @@
 
   @media (min-width: $tablet-width) and (max-width: 1439px) {
     border: 1px solid #cdcdcd;
-    margin-bottom: 69px;
+    margin-bottom: 68px;
   }
 
   @media (min-width: $desktop-width) {
