--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,5 +1,13 @@
 .catalog {
   padding-top: 27px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 64px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 75px;
+  }
 }
 
 .catalog__title {
@@ -7,20 +15,19 @@
 
   @media (max-width: $mobile-width-only) {
     width: calc(100% + 40px);
-    padding: 0 20px 48px 20px;
-    margin: 0 -20px;
+    padding: 0 20px 40px 20px;
+    margin-right: -20px;
+    margin-left: -20px;
     border-bottom: 1px solid #ebebeb;
     box-sizing: border-box;
   }
 
   @media (min-width: $tablet-width) {
-    padding-left: 38px;
-    padding-right: 38px;
     margin-bottom: 82px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0;
+    margin-bottom: 84px;
   }
 }
 
@@ -42,7 +49,7 @@
   @media (min-width: $desktop-width) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 80px;
-    row-gap: 63px;
+    row-gap: 62px;
   }
 }
 
