--- a/source/sass/blocks/form-contacts.scss
+++ b/source/sass/blocks/form-contacts.scss
@@ -1,5 +1,5 @@
 .form-contacts__title {
-  margin-bottom: 35px;
+  margin-bottom: 36px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 76px;
@@ -10,7 +10,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  row-gap: 14px;
+  row-gap: 16px;
 
   @media (min-width: $tablet-width) {
     row-gap: 20px;
@@ -31,11 +31,11 @@
 .form-contacts__label {
   display: flex;
   align-items: center;
-  column-gap: 10px;
+  column-gap: 11px;
   position: relative;
 
   @media (min-width: $tablet-width) {
-    column-gap: 20px;
+    column-gap: 21px;
   }
 }
 
@@ -48,7 +48,7 @@
   @include form-text;
   @include input-basic;
   line-height: 24px;
-  padding: 15px 45px 14px 15px;
+  padding: 11px 45px 8px 15px;
   flex-grow: 1;
 
   &:focus + .form-contacts__icon {
@@ -68,10 +68,10 @@
   position: absolute;
   width: 20px;
   height: 20px;
+  top: 12px;
   right: 15px;
-  top: 50%;
-  transform: translateY(-50%);
   background-color: $color-basic;
+  mask-repeat: no-repeat;
 
   &--email {
     mask-image: url("../icons/sprite.svg#email");
@@ -79,5 +79,15 @@
 
   &--tel {
     mask-image: url("../icons/sprite.svg#tel");
+    right: 13px;
+  }
+
+  @media (min-width: $tablet-width) {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  @media (min-width: $desktop-width) {
+    right: 18px;
   }
 }
