--- a/source/sass/blocks/more-products.scss
+++ b/source/sass/blocks/more-products.scss
@@ -1,7 +1,29 @@
+.more-products {
+  position: relative;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 31px;
+    width: 30px;
+    border-top: 2px solid #d3d3d3;
+
+    @media (min-width: $tablet-width) {
+      width: 60px;
+      top: 80px;
+    }
+  }
+
+  &::after {
+    transform: rotate(90deg);
+  }
+}
+
 .more-products__title {
   @include accented-text;
   color: #111111;
-  margin-bottom: 8px;
+  margin-bottom: -4px;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
@@ -15,12 +37,13 @@
   @media (min-width: $desktop-width) {
     padding-left: 0;
     padding-right: 0;
+    margin-bottom: 21px;
   }
 }
 
 .more-products__subtitle {
   @include main-text(12px, 16px);
-  margin-bottom: 21px;
+  margin-bottom: 7px;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
