--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   row-gap: 13px;
-  padding-top: 11px;
+  padding-top: 13px;
   padding-bottom: 24px;
 
   &--show-more {
@@ -26,7 +26,7 @@
     &--show-more {
       align-self: end;
       padding-top: 159px;
-      padding-bottom: 37px;
+      padding-bottom: 36px;
       border: 2px solid #f2f2f2;
       background-image: none;
     }
@@ -34,14 +34,14 @@
 
   @media (min-width: $desktop-width) {
     min-width: 245px;
-    padding: 28px 38px 40px 39px;
+    padding: 29px 38px 40px 39px;
 
     &--size-xl {
       padding-top: 0;
     }
 
     &--show-more {
-      padding-top: 158px;
+      padding-top: 159px;
       padding-left: 38px;
     }
   }
@@ -54,6 +54,10 @@
 
   @media (max-width: $mobile-width-only) {
     flex-basis: 50%;
+
+    &--chicken {
+      margin-bottom: auto;
+    }
   }
 
   @media (min-width: $tablet-width) {
@@ -65,25 +69,50 @@
   }
 }
 
+.product-card--size-xl .product-card__img-link {
+  @media (min-width: $desktop-width) {
+    margin-bottom: 48px;
+  }
+}
+
 .product-card__image {
   object-fit: contain;
 
+  &--small {
+    width: 68px;
+    height: 78px;
+    padding-bottom: 6px;
+  }
+
+  &--middle {
+    width: 72px;
+    height: 84px;
+    padding-bottom: 4px;
+  }
+
+  &--big {
+    width: 84px;
+    height: 100px;
+  }
+
   @media (min-width: $tablet-width) {
-    &--small {
-      max-width: 163px;
-      max-height: 174px;
+    &--small,
+    &--middle {
+      width: 163px;
+      height: 174px;
+      padding-bottom: 0;
     }
 
     &--big {
-      max-width: 168px;
-      max-height: 200px;
+      width: 168px;
+      height: 200px;
     }
   }
 
   @media (min-width: $desktop-width) {
     &--big {
-      max-width: 172px;
-      max-height: 196px;
+      width: 172px;
+      height: 196px;
     }
   }
 }
@@ -92,19 +121,18 @@
   display: flex;
   flex-direction: column;
   flex-basis: 50%;
-  padding-bottom: 5px;
+  margin-bottom: 8px;
 
   @media (min-width: $tablet-width) {
     flex-grow: 1;
     flex-basis: auto;
-    padding-bottom: 0;
     margin-bottom: 33px;
   }
 }
 
 .product-card__link {
   padding-right: 42px;
-  margin-bottom: 18px;
+  margin-bottom: 14px;
 
   @media (min-width: $tablet-width) {
     padding-right: 40px;
