--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -36,6 +36,37 @@
   }
 }
 
+@mixin decorative-line {
+  display: inline-block;
+  padding-left: 20px;
+  padding-right: 23px;
+  margin-left: -20px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 16px;
+    right: 0;
+    z-index: -1;
+    display: block;
+    width: 100vw;
+    height: 2px;
+    background-color: $color-accent;
+    box-shadow: 100vw 0 $color-accent;
+
+    @media (min-width: $tablet-width) {
+      top: 22px;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-left: -40px;
+  }
+}
+
 @mixin input-basic {
   outline: 1px solid #e7e7e7;
 
