--- a/source/sass/blocks/location-map.scss
+++ b/source/sass/blocks/location-map.scss
@@ -1,29 +1,12 @@
 .location-map {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
   min-height: 362px;
-  background-image: url("../img/map/map-mob@1x.png");
   background-color: #ededed;
-  background-size: cover;
-  background-position: center;
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/map/map-mob@2x.png");
-  }
 
   @media (min-width: $tablet-width) {
     min-height: 400px;
-    background-image: url("../img/map/map-tab@1x.png");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/map/map-tab@2x.png");
-    }
-  }
-
-  @media (min-width: $desktop-width) {
-    background-image: url("../img/map/map-desk@1x.png");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/map/map-desk@2x.png");
-    }
   }
 }
 
@@ -33,12 +16,19 @@
   height: 100%;
   min-height: 362px;
   border: none;
-
-  &--nojs {
-    display: none;
-  }
+  grid-area: 1 / 1 /-1 / -1;
 
   @media (min-width: $tablet-width) {
     min-height: 400px;
   }
+}
+
+.location-map__img-wrapper {
+  grid-area: 1 / 1 /-1 / -1;
+  z-index: 1;
+}
+
+.location-map__img {
+  width: 100%;
+  object-fit: cover;
 }
