--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -18,8 +18,8 @@
 
 @font-face {
   font-family: "Lato";
-  src: url("../fonts/lato/Lato-Regular.woff2") format("woff2"),
-    url("../fonts/lato/Lato-Regular.woff") format("woff");
+  src: url("../fonts/lato/latoregular.woff2") format("woff2"),
+    url("../fonts/lato/latoregular.woff") format("woff");
   font-style: normal;
   font-weight: 400;
   font-display: swap;
